# WaterBench-TimeSeries-WWTPINflow

./: .gitignore  README.md  pyproject.toml
.preprocessing/raw_data/: Horsens_250218.csv  horsens_dmi_data.csv
code/: 0_overview.ipynb  1_data_split.ipynb  2_baseline.ipynb  README.md  baseline.ipynb  data_split.ipynb  example.ipynb  example_feature_engineering.ipynb  example_modelling.ipynb  example_old.ipynb  example_perfect_forecast.ipynb  exploration.ipynb  feature_engineering.ipynb  horizon_exploration.ipynb  overview.ipynb  recursive_exploration.ipynb  testing_functions.py  units.json  utils.py  xgboost.ipynb  xgboost1.ipynb  xgboost2.ipynb  xgboost_tree  xgboost_tree_recursive
notebooks/: overview.ipynb  sandbox.ipynb
observations/: dmi.csv  wwtp.csv
processed/: data.csv
