[project]
name = "waterbench-timeseries-wwtpinflow"
version = "0.1.0"
description = "Time series data captured at a waste water treatment plant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "numpy",
    "matplotlib",
    "pandas",
    "darts",
    "scikit-learn",
    "scipy",
    "seaborn",
]

[tool.setuptools.packages.find]
exclude = ['code*', 'show*', 'processed*', 'observations*']