[project]
name = "waterbench-timeseries-wwtpinflow"
version = "0.1.0"
description = "Time series data captured at a waste water treatment plant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "darts>=0.34",
    "scipy",
    "seaborn",
]

[tool.setuptools.packages.find]
exclude = ['code*', 'show*', 'processed*', 'observations*']
