[project]
name = "waterbench-timeseries-wwtpinflow"
version = "0.1.0"
description = "Time series data captured at a waste water treatment plant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat==5.10.4",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.6",
    "matplotlib==3.10.1",
    "u8darts==0.35.0",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "jinja2==3.1.6",
]

[tool.setuptools.packages.find]
exclude = ['code*', 'show*', 'processed*', 'observations*']
